# canopee

./: .gitignore  README.md  commands.yaml  pyproject.toml  ruff.toml  zensical.toml
.github/workflows/: release.yml  tests.yml
docs/: index.md
docs/api/: core.md
docs/concepts/: cli.md  configbase.md  serialization.md  sources.md  store.md  sweep.md
docs/examples/: mnist.md
docs/getting-started/: installation.md  quickstart.md  why.md
docs/stylesheets/: extra.css
examples/: demo_cli.py  demo_cli_v2.py  demo_errors.py  demo_new_api.py  simple_config.py  verify_cli_docs.py
src/canopee/: __init__.py  cli.py  core.py  errors.py  serialization.py  sources.py  store.py  sweep.py
src/canopee/sweep/: __init__.py  distributions.py  engine.py  strategies.py
tests/: test_cli.py  test_config.py  test_core.py  test_errors.py  test_serialization.py  test_sources.py  test_store.py  test_sweep_distributions.py  test_sweep_engine.py  test_sweep_strategies.py
